--- a/server/package.json
+++ b/server/package.json
@@ -3,24 +3,37 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/index.js",
+    "test": "mocha --exit && npm run lint",
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js",
     "migrate": "knex migrate:latest",
+    "lint": "eslint --fix --ext .js .",
     "seed": "knex seed:run"
   },
-  "author": "",
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "author": "Radish Team",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.3",
+    "chai": "^4.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-problems": "^7.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "knex": "^2.4.2",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
-    "pg": "^8.9.0"
+    "pg": "^8.9.0",
+    "prettier": "^2.8.4",
+    "pretty-quick": "^3.1.3"
   }
 }
