--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --exit && npm run lint",
-    "start": "node ./server.js",
-    "dev": "nodemon ./server.js",
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js",
     "migrate": "knex migrate:latest",
     "lint": "eslint --fix --ext .js .",
+    "build-production": "npm install --production && npm run migrate",
+    "build-development": "npm install && npm run migrate && npm run seed",
     "seed": "knex seed:run"
   },
   "husky": {
@@ -20,19 +22,21 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.3",
-    "chai": "^4.3.7",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "pg": "^8.9.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
     "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-problems": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "express": "^4.18.2",
     "husky": "^8.0.3",
-    "knex": "^2.4.2",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
-    "pg": "^8.9.0",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3"
   }
