feat: Add autocomplete

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "build": "^0.1.4",
     "fetch": "^1.1.0",
     "firebase": "^9.17.1",
     "firebase-auth": "^0.1.2",
@@ -19,6 +20,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "run": "^1.4.0",
     "sweetalert2": "^11.7.2",
     "web-vitals": "^2.1.4"
   },
