--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.3",
+    "build": "^0.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
-    "dotenv": "^16.0.3",
-    "pg": "^8.9.0"
+    "pg": "^8.9.0",
+    "run": "^1.4.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
